# Advanced-task-management-system

./: .gitignore  CMakeLists.txt  LICENSE  database.txt  imgui.ini
assets/fonts/: desktop.ini
include/data_management/: data_management.hpp
include/date/: date.hpp
include/gui/: application.hpp
include/task_structure/: category.hpp  recurring_task.hpp  subtask.hpp  task.hpp
src/: main.cpp
src/data_management/: data_management.cpp
src/date/: date.cpp
src/gui/: application.cpp
src/task_structure/: recurring_task.cpp  subtask.cpp  task.cpp
